--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 Ein einfacher VIM Spickzettel.
 
+Eigentlich ein widerspruch in sich, denn einfach ist an VIM gar nichts. :-P
+
+Es hilft auf jeden Fall die Grundlagen Kommandos zu verstehen, auswendig zu lernen und anzuwenden.
+
+
+
 Offen:
 Accordeon
 Inhalt
