Tasten Style Sheets

--- a/README
+++ b/README
@@ -1,11 +1,5 @@
 Ein einfacher VIM Spickzettel.
 
-Eigentlich ein widerspruch in sich, denn einfach ist an VIM gar nichts. :-P
+Responsive
+Einfach
 
-Es hilft auf jeden Fall die Grundlagen Kommandos zu verstehen, auswendig zu lernen und anzuwenden.
-
-
-
-Offen:
-Accordeon
-Inhalt
